[gd_scene load_steps=3 format=3 uid="uid://b5m28uva2sq6k"]

[ext_resource type="Script" uid="uid://dmyehpiplovic" path="res://pages/level_editor/quit_edit_panel/quit_edit_panel.gd" id="1_cxpor"]
[ext_resource type="Theme" uid="uid://cf25w553mynfo" path="res://theme.tres" id="2_4lfod"]

[node name="QuitEditPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cxpor")

[node name="BigPanel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SmallPanel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.357
anchor_top = 0.338
anchor_right = 0.643
anchor_bottom = 0.662
offset_left = -0.440063
offset_top = -0.0400391
offset_right = 0.439941
offset_bottom = 0.039917

[node name="QuitEditLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.378
anchor_top = 0.384
anchor_right = 0.622
anchor_bottom = 0.463
offset_left = -0.76001
offset_top = 0.279999
offset_right = 0.759888
offset_bottom = -0.0400391
theme_override_font_sizes/font_size = 30
text = "Do you want to leave this room?
Enter the room ID to confirm."
horizontal_alignment = 1
autowrap_mode = 2

[node name="TitleEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.383
anchor_top = 0.481
anchor_right = 0.617
anchor_bottom = 0.528
offset_left = -0.360046
offset_top = 0.519958
offset_right = 0.359863
offset_bottom = -0.23999
theme = ExtResource("2_4lfod")
placeholder_text = "Room ID"
editable = false

[node name="ConfirmButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.383
anchor_top = 0.569
anchor_right = 0.487
anchor_bottom = 0.616
offset_left = -0.360046
offset_top = 0.47998
offset_right = -0.0400391
offset_bottom = -0.28009
theme = ExtResource("2_4lfod")
text = "Confirm"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.513
anchor_top = 0.569
anchor_right = 0.617
anchor_bottom = 0.616
offset_left = 0.039978
offset_top = 0.47998
offset_right = 0.359863
offset_bottom = -0.28009
theme = ExtResource("2_4lfod")
text = "Close"
